--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -35,7 +35,7 @@
     <br><br>
     <br><br>
     {% for product in products %}
-        <div class="card" style="width: 300px; display: inline-block; border: 1px solid #e6e6e6; border-radius: 10px; background-color: white; padding: 10px; ">
+        <div class="card" style="width: 300px ;display: inline-block; border: 1px solid #e6e6e6; border-radius: 10px; background-color: white; padding: 10px; margin: 5px;">
             <img src="{{ product.image_url }}" class="card-img-op" alt="..." width="280", height="280">
             <div class="card-body">
                 <h5 class="card-title">{{ product.name }}</h5>
